--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
+[5:56 pm, 31/12/2021] Ms Fatema: <!DOCTYPE html>
 <html>
-  <p><a href="menu.pdf">Click Here Event Info</a></p>
+<head>
+<style>
+h1 {text-align: center;}
+p {text-align: center;}
+div {text-align: center;}
+</style>
+</head>
+<body>
+
+<h1><p><a href="menu.pdf">Click Here Event Info</a></p></h1>
+<p>This is a paragraph.</p>
+<div>This is a div.</div>
+
+</body>
 </html>
+[5:57 pm, 31/12/2021] Ms Fatema: 
