--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-[5:56 pm, 31/12/2021] Ms Fatema: <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <style>
@@ -9,10 +9,9 @@ div {text-align: center;}
 </head>
 <body>
 
-<h1><p><a href="menu.pdf">Click Here Event Info</a></p></h1>
+<h1><p><a href="example.pdf">Click Here Event Info</a></p></h1>
 <p>This is a paragraph.</p>
 <div>This is a div.</div>
 
 </body>
 </html>
-[5:57 pm, 31/12/2021] Ms Fatema: 
