--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ div {text-align: center;}
 </head>
 <body>
 
-<h1><p><a href="example.pdf">Click Here Event Info</a></p></h1>
+<h1><p><a href="menu.pdf">Click Here Event Info</a></p></h1>
 <p>This is a paragraph.</p>
 <div>This is a div.</div>
 
