--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html>
 <head>
 <style>
+https://github.com/mohashami/menu/blob/main/rest.jpg
+h1   {color: blue;}
+p    {color: red;}  
 h1 {text-align: center;}
 p {text-align: center;}
 div {text-align: center;}
 </style>
 </head>
 <body>
+
+<h1 style="color:Tomato;">BREAD & OLIVE RESTAURANT </p>
   
-<h1><p>BREAD & OLIVE RESTAURANT </p>
 
 <p>Dear Guest,
 We are very happy to welcome you to our
