--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@ div {text-align: center;}
   
 
 <p>Dear Guest,
-We are very happy to welcome you to our
-"BREAD & OLIVE" restaurant
+We are very happy to welcome you to our "BREAD & OLIVE" restaurant
 This menu is created with the aim of giving you a tantalizing taste of Dalmatian cuisine and creative cooking.
 To ensure that your dining experience is exceptional, don’t hesitate to ask for something that is not included in our menu. We will do our best to fulfill any special request that you may have.<p>
  
