--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ div {text-align: center;}
 <p>Dear Guest,<p>
 <p>We are very happy to welcome you to our "BREAD & OLIVE" restaurant.<p>
 <p>This menu is created with the aim of giving you a tantalizing taste of Dalmatian cuisine and creative cooking.<p>
-<p>To ensure that your dining experience is exceptional, don’t hesitate to ask for something that is not included in our menu. We will do our best to fulfill any special request that you may have.<p>
+<p>To ensure that your dining experience is exceptional, don’t hesitate to ask for something that is not included in our menu.<p>
+ <p>We will do our best to fulfill any special request that you may have.<p>
  
 <p>WITH BEST REGARDS.</p>
   
