--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html>
 <head>
 <style>
-https://github.com/mohashami/menu/blob/main/rest.jpg
+body {
+   /* Background pattern from Toptal Subtle Patterns */
+   height: 400px;
+   width: 100%;
+   background-image: url("./images/oriental-tiles.png");
+}
 h1   {color: blue;}
 p    {color: red;}  
 h1 {text-align: center;}
