--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ body {
    /* Background pattern from Toptal Subtle Patterns */
    height: 400px;
    width: 100%;
-   background-image: url("./images/oriental-tiles.png");
+   background-image: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Frestaurant&psig=AOvVaw2NdhzIC2rhxJ5QJDjzSMWj&ust=1641035723826000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCOCxgND0jfUCFQAAAAAdAAAAABAI");
 }
 h1   {color: blue;}
 p    {color: red;}  
