--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ p    {color: red;}
 h1 {text-align: center;}
 p {text-align: center;}
 div {text-align: center;}
- background-image: url("https://upload.wikimedia.org/wikipedia/commons/c/c9/Moon.jpg");
+<div style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/c/c9/Moon.jpg');">
 </style>
 </head>
 <body>
