--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@ p    {color: red;}
 h1 {text-align: center;}
 p {text-align: center;}
 div {text-align: center;}
-<div style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/c/c9/Moon.jpg');">
+  background-image: url('https://upload.wikimedia.org/wikipedia/commons/c/c9/Moon.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 </style>
 </head>
 <body>
