--- a/index.html
+++ b/index.html
@@ -7,13 +7,9 @@ p    {color: red;}
 h1 {text-align: center;}
 p {text-align: center;}
 div {text-align: center;}
-  background-image: url('https://upload.wikimedia.org/wikipedia/commons/c/c9/Moon.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
 </style>
 </head>
-<body>
+<body background="https://upload.wikimedia.org/wikipedia/commons/c/c9/Moon.jpg">
 
 <h1 style="color:Tomato;">BREAD & OLIVE RESTAURANT </p>
   
