--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ p {text-align: center;}
 div {text-align: center;}
 </style>
 </head>
-<body background="https://github.com/mohashami/menu/blob/main/eat.jpg">
+<body background="https://github.com/mohashami/menu/blob/main/eat.jpg?raw=true">
 
 <h1 style="color:Tomato;">BREAD & OLIVE RESTAURANT </p>
   
