--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@ p    {color: red;}
 h1 {text-align: center;}
 p {text-align: center;}
 div {text-align: center;}
-background-position: center;
-background-repeat: no-repeat;
-background-size: cover;
 
 </style>
 </head>
-<body background="https://github.com/mohashami/menu/blob/main/eat.jpg?raw=true">
+<body background="https://github.com/mohashami/menu/blob/main/eat.jpg?raw=true" background-repeat: no-repeat;>
 
 <h1 style="color:Tomato;">BREAD & OLIVE RESTAURANT </p>
   
