--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ div {text-align: center;}
 
 </style>
 </head>
-<body background="https://github.com/mohashami/menu/blob/main/eat.jpg?raw=true" background-repeat: no-repeat;>
+<body background="https://github.com/mohashami/menu/blob/main/eat.jpg?raw=true";>
 
 <h1 style="color:Tomato;">BREAD & OLIVE RESTAURANT </p>
   
