--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@ p    {color: red;}
 h1 {text-align: center;}
 p {text-align: center;}
 div {text-align: center;}
-
 </style>
+  
+ <style>
+body {
+  background-image: url("https://github.com/mohashami/menu/blob/main/eat.jpg?raw=true");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+</style> 
+  
 </head>
 <body background="https://github.com/mohashami/menu/blob/main/eat.jpg?raw=true";>
 
