--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body {
 </head>
 <body background="https://github.com/mohashami/menu/blob/main/eat.jpg?raw=true";>
 
-<h1 style="color:Tomato;">BREAD & OLIVE RESTAURANT </p>
+<h1 style="font-size:30px">BREAD & OLIVE RESTAURANT </p>
   
 
 <p>Dear Guest,<p>
