--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body {
 </head>
 <body background="https://github.com/mohashami/menu/blob/main/eat.jpg?raw=true";>
 
-<h1 style="background-color:tomato;">BREAD & OLIVE RESTAURANT </p>
+<h1 style="background-color:tomato; style="font-size:300%; ">BREAD & OLIVE RESTAURANT </p>
   
 
 <p>Dear Guest,<p>
